--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       Score: <span id="score">0</span><br>
       High Score: <span id="highScore">0</span>
     </div>
-    <img src="assets/me.png" class="stickman" id="stickman" />
+    <img src="me.png" class="stickman" id="stickman" />
     <div class="obstacle" id="obstacle"></div>
     <div class="ground"></div>
     <div class="game-over" id="gameOver">
