--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       position: absolute;
       width: 200%;
       height: 120px;
-      background: url('https://i.imgur.com/J6qOtjF.png') repeat-x;
+      background: url('cloud.png') repeat-x;
       animation: moveClouds 60s linear infinite;
       top: 30px;
       opacity: 0.4;
@@ -85,7 +85,7 @@
       right: -100px;
       width: 60px;
       height: 40px;
-      background: url('https://i.imgur.com/9yPOCyY.png') no-repeat center/contain;
+      background: url('rat.png') no-repeat center/contain;
       animation: moveObstacle 2s linear infinite;
     }
 
